[package]
name = "lightyear-tut"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.7"
bevy = "0.19"
serde = { version = "1", features = ["derive"] }
lightyear = { version = "0.28", features = [
    "client",
    "server",
    "netcode",
    "udp",
    "std",
    "replication",
    "prediction",
    "interpolation",
    "avian3d",
] }

# Match the example profiles: bevy in a plain debug build is unusably slow.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
